--- a/Africa.html
+++ b/Africa.html
@@ -70,9 +70,24 @@
       <!-- end of the parallax -->
 
 
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#abdaf4" fill-opacity="1" d="M0,96L48,122.7C96,149,192,203,288,208C384,213,480,171,576,144C672,117,768,107,864,117.3C960,128,1056,160,1152,154.7C1248,149,1344,107,1392,85.3L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#abdaf4" fill-opacity="1"
+          d="M0,96L48,122.7C96,149,192,203,288,208C384,213,480,171,576,144C672,117,768,107,864,117.3C960,128,1056,160,1152,154.7C1248,149,1344,107,1392,85.3L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+        </path>
+      </svg>
 
-      <div class="container-fluid">
+      <div class="container-fluid text-center">
+        <div class="row">
+          <div class="col-sm-3 mx-auto">
+            <div class="card card-parallax-gum">
+              <div class="card-body">
+                <h2 class="card-title">Ethiopian Gum!</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <Br>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card card-gums text-center h-100 mx-4 px-4 py-2">
@@ -82,7 +97,8 @@
                   --Gum--
                 </h5>
                 <hr>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
                 <a href="Order.html" class="btn btn-inner-clr inner-clr">
                   Add To Cart!
                 </a>
@@ -97,7 +113,8 @@
                   --Gum--
                 </h5>
                 <hr>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
                 <a href="Order.html" class="btn btn-inner-clr inner-clr">
                   Add To Cart!
                 </a>
@@ -112,7 +129,8 @@
                   --Gum--
                 </h5>
                 <hr>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
                 <a href="Order.html" class="btn btn-inner-clr inner-clr">
                   Add To Cart!
                 </a>
@@ -121,12 +139,28 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#abdaf4" fill-opacity="1" d="M0,96L48,122.7C96,149,192,203,288,208C384,213,480,171,576,144C672,117,768,107,864,117.3C960,128,1056,160,1152,154.7C1248,149,1344,107,1392,85.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
- 
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#abdaf4" fill-opacity="1"
+          d="M0,96L48,122.7C96,149,192,203,288,208C384,213,480,171,576,144C672,117,768,107,864,117.3C960,128,1056,160,1152,154.7C1248,149,1344,107,1392,85.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+      </svg>
+
     </div>
   </section>
 
-   <div class="container-fluid">
+  <div class="container-fluid text-center">
+
+    <div class="row">
+      <div class="col-sm-3 mx-auto">
+        <div class="card card-parallax-gum">
+          <div class="card-body">
+            <h2 class="card-title">Nigerian Gum!</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <Br>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card card-gums text-center h-100 mx-4 px-4 py-2">
@@ -136,7 +170,8 @@
               --Gum--
             </h5>
             <hr>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
             <a href="Order.html" class="btn btn-inner-clr inner-clr">
               Add To Cart!
             </a>
@@ -151,7 +186,8 @@
               --Gum--
             </h5>
             <hr>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
             <a href="Order.html" class="btn btn-inner-clr inner-clr">
               Add To Cart!
             </a>
@@ -166,7 +202,8 @@
               --Gum--
             </h5>
             <hr>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
             <a href="Order.html" class="btn btn-inner-clr inner-clr">
               Add To Cart!
             </a>
@@ -180,8 +217,23 @@
       <!-- end of the parallax -->
 
 
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#abdaf4" fill-opacity="1" d="M0,32L48,32C96,32,192,32,288,64C384,96,480,160,576,170.7C672,181,768,139,864,117.3C960,96,1056,96,1152,106.7C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
-      <div class="container-fluid">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#abdaf4" fill-opacity="1"
+          d="M0,32L48,32C96,32,192,32,288,64C384,96,480,160,576,170.7C672,181,768,139,864,117.3C960,96,1056,96,1152,106.7C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+        </path>
+      </svg>
+      <div class="container-fluid text-center">
+        <div class="row">
+          <div class="col-sm-3 mx-auto">
+            <div class="card card-parallax-gum">
+              <div class="card-body">
+                <h2 class="card-title">Sudanese Gum!</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <Br>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card card-gums text-center h-100 mx-4 px-4 py-2">
@@ -191,7 +243,8 @@
                   --Gum--
                 </h5>
                 <hr>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
                 <a href="Order.html" class="btn btn-inner-clr inner-clr">
                   Add To Cart!
                 </a>
@@ -206,7 +259,8 @@
                   --Gum--
                 </h5>
                 <hr>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
                 <a href="Order.html" class="btn btn-inner-clr inner-clr">
                   Add To Cart!
                 </a>
@@ -221,7 +275,8 @@
                   --Gum--
                 </h5>
                 <hr>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
                 <a href="Order.html" class="btn btn-inner-clr inner-clr">
                   Add To Cart!
                 </a>
@@ -230,7 +285,11 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#abdaf4" fill-opacity="1" d="M0,32L48,32C96,32,192,32,288,64C384,96,480,160,576,170.7C672,181,768,139,864,117.3C960,96,1056,96,1152,106.7C1248,117,1344,139,1392,149.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#abdaf4" fill-opacity="1"
+          d="M0,32L48,32C96,32,192,32,288,64C384,96,480,160,576,170.7C672,181,768,139,864,117.3C960,96,1056,96,1152,106.7C1248,117,1344,139,1392,149.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+      </svg>
     </div>
   </section>
 
@@ -330,7 +389,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-  </script>
+    </script>
 </body>
 
 </html>
