--- a/Africa.html
+++ b/Africa.html
@@ -213,83 +213,88 @@
     </div>
   </div>
   <section class="parallax-section">
-    <div class="parallax">
-      <!-- end of the parallax -->
+    <div class="container-fluid">
+      <div class="parallax">
+        <!-- end of the parallax -->
 
 
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#abdaf4" fill-opacity="1"
-          d="M0,32L48,32C96,32,192,32,288,64C384,96,480,160,576,170.7C672,181,768,139,864,117.3C960,96,1056,96,1152,106.7C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
-        </path>
-      </svg>
-      <div class="container-fluid text-center">
-        <div class="row">
-          <div class="col-sm-3 mx-auto">
-            <div class="card card-parallax-gum">
-              <div class="card-body">
-                <h2 class="card-title">Sudanese Gum!</h2>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="#abdaf4" fill-opacity="1"
+            d="M0,32L48,32C96,32,192,32,288,64C384,96,480,160,576,170.7C672,181,768,139,864,117.3C960,96,1056,96,1152,106.7C1248,117,1344,139,1392,149.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
+          </path>
+        </svg>
+        <div class="container-fluid text-center">
+          <div class="row">
+            <div class="col-sm-3 mx-auto">
+              <div class="card card-parallax-gum">
+                <div class="card-body">
+                  <h2 class="card-title">Sudanese Gum!</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <br>
+          <Br>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card card-gums text-center h-100 mx-4 px-4 py-2">
+                <img src="/images/Birria.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    --Gum--
+                  </h5>
+                  <hr>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                    additional
+                    content. This content is a little bit longer.</p>
+                  <a href="Order.html" class="btn btn-inner-clr inner-clr">
+                    Add To Cart!
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card card-gums text-center h-100 mx-4 px-4 py-2">
+                <img src="/images/Birria.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    --Gum--
+                  </h5>
+                  <hr>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                    additional
+                    content. This content is a little bit longer.</p>
+                  <a href="Order.html" class="btn btn-inner-clr inner-clr">
+                    Add To Cart!
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card card-gums text-center h-100 mx-4 px-4 py-2">
+                <img src="/images/Birria.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">
+                    --Gum--
+                  </h5>
+                  <hr>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                    additional
+                    content. This content is a little bit longer.</p>
+                  <a href="Order.html" class="btn btn-inner-clr inner-clr">
+                    Add To Cart!
+                  </a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <br>
-        <Br>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-          <div class="col">
-            <div class="card card-gums text-center h-100 mx-4 px-4 py-2">
-              <img src="/images/Birria.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">
-                  --Gum--
-                </h5>
-                <hr>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                  Add To Cart!
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card card-gums text-center h-100 mx-4 px-4 py-2">
-              <img src="/images/Birria.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">
-                  --Gum--
-                </h5>
-                <hr>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                  Add To Cart!
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card card-gums text-center h-100 mx-4 px-4 py-2">
-              <img src="/images/Birria.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">
-                  --Gum--
-                </h5>
-                <hr>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
-                <a href="Order.html" class="btn btn-inner-clr inner-clr">
-                  Add To Cart!
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="#abdaf4" fill-opacity="1"
+            d="M0,32L48,32C96,32,192,32,288,64C384,96,480,160,576,170.7C672,181,768,139,864,117.3C960,96,1056,96,1152,106.7C1248,117,1344,139,1392,149.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+          </path>
+        </svg>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#abdaf4" fill-opacity="1"
-          d="M0,32L48,32C96,32,192,32,288,64C384,96,480,160,576,170.7C672,181,768,139,864,117.3C960,96,1056,96,1152,106.7C1248,117,1344,139,1392,149.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-        </path>
-      </svg>
     </div>
   </section>
 
@@ -389,7 +394,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
-    </script>
+  </script>
 </body>
 
 </html>
